      #c307b0795a01086a60e89026a548745c54c1a79e and affected at least Oracle DB.

    PostgreSQL-specific:
    - When creating columns with an auto-increment function in PostgreSQL, it was possible for invalid SQL to be generated.
      This was fixed by commit 88f76fc67f10f17e02cd2909fea876ff904777c4

    HyperSQL-specific:
    - The Liquibase macro current_datetime for a column default (replaced by the DBMS-specific function for getting the
      current date and/or time) did not work in HyperSQL. This was fixed in commit 23ef71b3a2c6ef872d7c27ef55f67cf4cc1b65ee
    - When snapshotting a HyperSQL column of the TIMESTAMP type that had a literal (e.g. TIMESTAMP'2017-05-27 18:34:45')
      as default value, incorrect SQL was generated. This was fixed in commit 8148b5bca5f6905c6b1bfa4617ffd4a7b202cca1.

    Firebird SQL-specific:
    - Fixed various problems in snapshotting Firebird databases. The root cause was that the data dictionary views (RDB$)
      in Firebird show identifiers (like table/column/index/... names) in CHAR columns, and these are right-padded with
      spaces. This caused various comparisons to fail and, as a consequence, invalid snapshot change sets and/or SQL
      was generated.

    Microsoft SQL Server-specific:
    - When snapshotting a SQL Server database, invalid "[]." prefixes that appear in front of identifiers could be generated
      due to a problem in schema name processing. This caused invalid SQL to be generated. The problem was fixed in
      commit cabacfe3593324f5223e53496d80c894f48abfa2

    IBM Informix-specific:
    - Fixed an issue where PRIMARY KEYs might not get generated. This problem might be related to upstream bug
      "[CORE-1775] Informix error when creating primary key"

    New features
    ============

    All supported databases:
    - Completely new logging system during ChangeSet processing, produces (hopefully) better human-readable output.
